Try to fixed top close modal on mobile

--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -106,6 +106,7 @@ header .intro-text img{
     right: 2vw;
     width: 45px;
     height: 45px;
+    z-index: 9999;
 }
 
 .portfolio-modal .close-modal .fa-2x{
@@ -120,6 +121,7 @@ header .intro-text img{
         right: 2vw;
         width: 60px;
         height: 60px;
+        z-index: 9999;
     }
     
     .portfolio-modal .close-modal .fa-2x{
